gap changes fixed

--- a/src/common-components/ProductPage.css
+++ b/src/common-components/ProductPage.css
@@ -216,7 +216,7 @@ h2 {
 .product-grid {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 95px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
